--- a/index.html
+++ b/index.html
@@ -1,17 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Frontend Mentor || Social Media Dashboard</title>
-
-  
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Social Media Dashboard</title>
   </head>
-  
-  <body>
 
+  <body>
+    <header>
+      <section class="social">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </section>
+      <hr>
+      <section class="toggle">
+        <p class="dark-mode">Dark Mode</p>
+        <!-- Rounded switch -->
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+        <!-- Rounded switch -->
+      </section>
+    </header>
+    <main>
+      <section class="first-four-card">
+        <section class="first-card">
+          <img src="./images/icon-facebook.svg" alt="Facebok Icon">
+          <span class="nathanf">@nathanf</span>
+          <h2>1987</h2>
+          <p>FOLLOWERS</p>
+          <span class="count">
+            <img src="./images/icon-up.svg" alt="up icon"><p>12 Today</p>
+          </span>
+        </section>
+        <section class="second-card">
+          <img src="./images/icon-twitter.svg" alt="Twitter Icon">
+          <span class="nathanf">@nathanf</span>
+          <h2>1044</h2>
+          <p>FOLLOWERS</p>
+          <span class="count">
+            <img src="./images/icon-up.svg" alt="up icon"><p>99 Today</p>
+          </span>
+        </section>
+        <section class="third-card">
+          <img src="./images/icon-instagram.svg" alt="Instagram Icon">
+          <span class="nathanf">@nathanf</span>
+          <h2>11k</h2>
+          <p>FOLLOWERS</p>
+          <span class="count">
+            <img src="./images/icon-up.svg" alt="up icon"><p>1099 Today</p>
+          </span>
+        </section>
+        <section class="fourth-card">
+          <img src="./images/icon-facebook.svg" alt="Facebok Icon">
+          <span class="nathanf">@nathanf</span>
+          <h2>8239</h2>
+          <p>SUBSCRIBERS</p>
+          <span class="count">
+            <img src="./images/icon-down.svg" alt="down icon"><p>144 Today</p>
+          </span>
+        </section>
+      </section>
+      <h1>Overview - Today</h1>
+      <section class="second-cards-group">
+        <section class="card">
+          <section class="views">
+            <p>Page Views</p>
+            <h3>87</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-facebook.svg" alt="facebook icon">
+            <span>
+              <img src="./images/icon-up.svg" alt="up icon">
+              <p>3%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="likes-one">
+            <p>Likes</p>
+            <h3>52</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-facebook.svg" alt="facebook icon">
+            <span>
+              <img src="./images/icon-down.svg" alt="down icon">
+              <p>2%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="likes-two">
+            <p>Likes</p>
+            <h3>5462</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-instagram.svg" alt="Instagram icon">
+            <span>
+              <img src="./images/icon-up.svg" alt="up icon">
+              <p>5462%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="Retweets">
+            <p>Retweets</p>
+            <h3>117</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-twitter.svg" alt="Twitter icon">
+            <span>
+              <img src="./images/icon-up.svg" alt="up icon">
+              <p>303%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="Like-three">
+            <p>Likes</p>
+            <h3>107</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-youtube.svg" alt="Youyube icon">
+            <span>
+              <img src="./images/icon-down.svg" alt="down icon">
+              <p>19%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="Total-views">
+            <p>Total Views</p>
+            <h3>1407</h3>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-youtube.svg" alt="Youtube icon">
+            <span>
+              <img src="./images/icon-down.svg" alt="down icon">
+              <p>12%</p>
+            </span>
+          </section>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
