--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Social Media Dashboard</title>
   </head>
@@ -19,13 +25,14 @@
       <section class="social">
         <h1>Social Media Dashboard</h1>
         <p>Total Followers: 23,004</p>
+        <hr />
       </section>
-      <hr>
+      
       <section class="toggle">
         <p class="dark-mode">Dark Mode</p>
         <!-- Rounded switch -->
         <label class="switch">
-          <input type="checkbox">
+          <input type="checkbox" />
           <span class="slider round"></span>
         </label>
         <!-- Rounded switch -->
@@ -34,39 +41,43 @@
     <main>
       <section class="first-four-card">
         <section class="first-card">
-          <img src="./images/icon-facebook.svg" alt="Facebok Icon">
+          <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
           <span class="nathanf">@nathanf</span>
           <h1>1987</h1>
           <p>FOLLOWERS</p>
           <span class="count">
-            <img src="./images/icon-up.svg" alt="up icon"><p>12 Today</p>
+            <img src="./images/icon-up.svg" alt="up icon" />
+            <p>12 Today</p>
           </span>
         </section>
         <section class="second-card">
-          <img src="./images/icon-twitter.svg" alt="Twitter Icon">
+          <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
           <span class="nathanf">@nathanf</span>
           <h1>1044</h1>
           <p>FOLLOWERS</p>
           <span class="count">
-            <img src="./images/icon-up.svg" alt="up icon"><p>99 Today</p>
+            <img src="./images/icon-up.svg" alt="up icon" />
+            <p>99 Today</p>
           </span>
         </section>
         <section class="third-card">
-          <img src="./images/icon-instagram.svg" alt="Instagram Icon">
+          <img src="./images/icon-instagram.svg" alt="Instagram Icon" />
           <span class="nathanf">@nathanf</span>
           <h1>11k</h1>
           <p>FOLLOWERS</p>
           <span class="count">
-            <img src="./images/icon-up.svg" alt="up icon"><p>1099 Today</p>
+            <img src="./images/icon-up.svg" alt="up icon" />
+            <p>1099 Today</p>
           </span>
         </section>
         <section class="fourth-card">
-          <img src="./images/icon-facebook.svg" alt="Facebok Icon">
+          <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
           <span class="nathanf">@nathanf</span>
           <h1>8239</h1>
           <p>SUBSCRIBERS</p>
           <span class="count">
-            <img src="./images/icon-down.svg" alt="down icon"><p>144 Today</p>
+            <img src="./images/icon-down.svg" alt="down icon" />
+            <p>144 Today</p>
           </span>
         </section>
       </section>
@@ -78,9 +89,9 @@
             <h1>87</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-facebook.svg" alt="facebook icon">
+            <img src="./images/icon-facebook.svg" alt="facebook icon" />
             <span>
-              <img src="./images/icon-up.svg" alt="up icon">
+              <img src="./images/icon-up.svg" alt="up icon" />
               <p>3%</p>
             </span>
           </section>
@@ -91,9 +102,9 @@
             <h1>52</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-facebook.svg" alt="facebook icon">
+            <img src="./images/icon-facebook.svg" alt="facebook icon" />
             <span>
-              <img src="./images/icon-down.svg" alt="down icon">
+              <img src="./images/icon-down.svg" alt="down icon" />
               <p>2%</p>
             </span>
           </section>
@@ -104,9 +115,9 @@
             <h1>5462</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-instagram.svg" alt="Instagram icon">
+            <img src="./images/icon-instagram.svg" alt="Instagram icon" />
             <span>
-              <img src="./images/icon-up.svg" alt="up icon">
+              <img src="./images/icon-up.svg" alt="up icon" />
               <p>5462%</p>
             </span>
           </section>
@@ -117,9 +128,9 @@
             <h1>117</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-twitter.svg" alt="Twitter icon">
+            <img src="./images/icon-twitter.svg" alt="Twitter icon" />
             <span>
-              <img src="./images/icon-up.svg" alt="up icon">
+              <img src="./images/icon-up.svg" alt="up icon" />
               <p>303%</p>
             </span>
           </section>
@@ -130,9 +141,9 @@
             <h1>107</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-youtube.svg" alt="Youyube icon">
+            <img src="./images/icon-youtube.svg" alt="Youtube icon" />
             <span>
-              <img src="./images/icon-down.svg" alt="down icon">
+              <img src="./images/icon-down.svg" alt="down icon" />
               <p>19%</p>
             </span>
           </section>
@@ -143,9 +154,9 @@
             <h1>1407</h1>
           </section>
           <section class="views-icon">
-            <img src="./images/icon-youtube.svg" alt="Youtube icon">
+            <img src="./images/icon-youtube.svg" alt="Youtube icon" />
             <span>
-              <img src="./images/icon-down.svg" alt="down icon">
+              <img src="./images/icon-down.svg" alt="down icon" />
               <p>12%</p>
             </span>
           </section>
