--- a/index.html
+++ b/index.html
@@ -40,41 +40,50 @@
     </header>
     <main>
       <section class="first-four-card">
-        <section class="first-card">
-          <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
-          <span class="nathanf">@nathanf</span>
+        <section class="cards first">
+          <span class="nathanf">
+            <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
+            <p>@nathanf</p>
+          </span>
           <h1>1987</h1>
-          <p>FOLLOWERS</p>
+          <p class="follower">FOLLOWERS</p>
           <span class="count">
             <img src="./images/icon-up.svg" alt="up icon" />
             <p>12 Today</p>
           </span>
         </section>
-        <section class="second-card">
-          <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
-          <span class="nathanf">@nathanf</span>
+        <section class="cards second">
+          
+          <span class="nathanf">
+            <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
+            <p>@nathanf</p>
+          </span>
           <h1>1044</h1>
-          <p>FOLLOWERS</p>
+          <p class="follower">FOLLOWERS</p>
           <span class="count">
             <img src="./images/icon-up.svg" alt="up icon" />
             <p>99 Today</p>
           </span>
         </section>
-        <section class="third-card">
-          <img src="./images/icon-instagram.svg" alt="Instagram Icon" />
-          <span class="nathanf">@nathanf</span>
+        <section class="cards third">
+          <span class="nathanf">
+            <img src="./images/icon-instagram.svg" alt="Instagram Icon" />
+            <p>@nathanf</p>
+          </span>
           <h1>11k</h1>
-          <p>FOLLOWERS</p>
+          <p class="follower">FOLLOWERS</p>
           <span class="count">
             <img src="./images/icon-up.svg" alt="up icon" />
             <p>1099 Today</p>
           </span>
         </section>
-        <section class="fourth-card">
-          <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
-          <span class="nathanf">@nathanf</span>
+        <section class="cards fourth">
+          <span class="nathanf">
+            <img src="./images/icon-facebook.svg" alt="Facebook Icon" />
+            <p>@nathanf</p>
+          </span>
           <h1>8239</h1>
-          <p>SUBSCRIBERS</p>
+          <p class="subscribers">SUBSCRIBERS</p>
           <span class="count">
             <img src="./images/icon-down.svg" alt="down icon" />
             <p>144 Today</p>
