completed dark mobile screen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Total Followers: 23,004</p>
         <hr />
       </section>
-      
+
       <section class="toggle">
         <p class="dark-mode">Dark Mode</p>
         <!-- Rounded switch -->
@@ -53,7 +53,6 @@
           </span>
         </section>
         <section class="cards second">
-          
           <span class="nathanf">
             <img src="./images/icon-twitter.svg" alt="Twitter Icon" />
             <p>@nathanf</p>
@@ -68,7 +67,7 @@
         <section class="cards third">
           <span class="nathanf">
             <img src="./images/icon-instagram.svg" alt="Instagram Icon" />
-            <p>@nathanf</p>
+            <p>@realnathanf</p>
           </span>
           <h1>11k</h1>
           <p class="follower">FOLLOWERS</p>
@@ -106,7 +105,7 @@
           </section>
         </section>
         <section class="card">
-          <section class="likes-one">
+          <section class=" views likes-one">
             <p>Likes</p>
             <h1>52</h1>
           </section>
@@ -114,12 +113,12 @@
             <img src="./images/icon-facebook.svg" alt="facebook icon" />
             <span>
               <img src="./images/icon-down.svg" alt="down icon" />
-              <p>2%</p>
+              <p class="red">2%</p>
             </span>
           </section>
         </section>
         <section class="card">
-          <section class="likes-two">
+          <section class=" views likes-two">
             <p>Likes</p>
             <h1>5462</h1>
           </section>
@@ -132,7 +131,20 @@
           </section>
         </section>
         <section class="card">
-          <section class="Retweets">
+          <section class=" views progile-views">
+            <p>Profile Views</p>
+            <h1>52k</h1>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-instagram.svg" alt="Instagram icon" />
+            <span>
+              <img src="./images/icon-up.svg" alt="up icon" />
+              <p>1375%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="views Retweets">
             <p>Retweets</p>
             <h1>117</h1>
           </section>
@@ -145,7 +157,20 @@
           </section>
         </section>
         <section class="card">
-          <section class="Like-three">
+          <section class="views Like-three">
+            <p>Likes</p>
+            <h1>507</h1>
+          </section>
+          <section class="views-icon">
+            <img src="./images/icon-twitter.svg" alt="Twitter icon" />
+            <span>
+              <img src="./images/icon-up.svg" alt="up icon" />
+              <p>553%</p>
+            </span>
+          </section>
+        </section>
+        <section class="card">
+          <section class="views Like-four">
             <p>Likes</p>
             <h1>107</h1>
           </section>
@@ -153,12 +178,12 @@
             <img src="./images/icon-youtube.svg" alt="Youtube icon" />
             <span>
               <img src="./images/icon-down.svg" alt="down icon" />
-              <p>19%</p>
+              <p class="red">19%</p>
             </span>
           </section>
         </section>
         <section class="card">
-          <section class="Total-views">
+          <section class=" views Total-views">
             <p>Total Views</p>
             <h1>1407</h1>
           </section>
@@ -166,7 +191,7 @@
             <img src="./images/icon-youtube.svg" alt="Youtube icon" />
             <span>
               <img src="./images/icon-down.svg" alt="down icon" />
-              <p>12%</p>
+              <p class="red">12%</p>
             </span>
           </section>
         </section>
