--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </section>
       <h1>Overview - Today</h1>
       <section class="second-cards-group">
-        <section class="card">
+        <section class="card card1">
           <section class="views">
             <p>Page Views</p>
             <h1>87</h1>
@@ -104,7 +104,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card2">
           <section class=" views likes-one">
             <p>Likes</p>
             <h1>52</h1>
@@ -117,7 +117,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card3">
           <section class=" views likes-two">
             <p>Likes</p>
             <h1>5462</h1>
@@ -130,7 +130,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card4">
           <section class=" views progile-views">
             <p>Profile Views</p>
             <h1>52k</h1>
@@ -143,7 +143,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card5">
           <section class="views Retweets">
             <p>Retweets</p>
             <h1>117</h1>
@@ -156,7 +156,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card6">
           <section class="views Like-three">
             <p>Likes</p>
             <h1>507</h1>
@@ -169,7 +169,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card7">
           <section class="views Like-four">
             <p>Likes</p>
             <h1>107</h1>
@@ -182,7 +182,7 @@
             </span>
           </section>
         </section>
-        <section class="card">
+        <section class="card card8">
           <section class=" views Total-views">
             <p>Total Views</p>
             <h1>1407</h1>
